# luci-app-komari-agent-c

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  cppcheck.cfg  test_regex.cmake
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmake/: BuildOptions.cmake  CompilerFlags.cmake  Dependencies.cmake  Platform.cmake  Version.cmake  toolchain-openwrt.cmake
docker/: Dockerfile.build  Dockerfile.legacy  README.en.md  README.md  build.sh  docker-compose.yml  test.sh
include/komari-agent-c/: common.h  komari-agent-c.h  komari_errno.h  version.h
luci/: Makefile
luci/files/usr/lib/lua/luci/controller/: komari-agent-c.lua
luci/files/usr/lib/lua/luci/model/cbi/komari-agent-c/: config.lua
luci/files/usr/lib/lua/luci/view/komari-agent-c/: log.htm  status.htm  status_header.htm
luci/files/usr/share/luci/menu.d/: luci-app-komari-agent-c.json
luci/files/usr/share/rpcd/acl.d/: luci-app-komari-agent-c.json
luci/po/templates/: komari-agent-c.pot
luci/po/zh_Hans/: komari-agent-c.po
openwrt/: Makefile
openwrt/files/: komari-agent-c.config  komari-agent-c.init
scripts/: apk-build.sh  build.sh  docker-build.sh  generate-release-notes.sh  ipkg-build.sh  lock-docker-images.sh  musl-check.sh  openwrt-build.sh  update-version.sh  verify-ci-config.sh  verify_ci_config.py
scripts/ipkg/CONTROL/: APKINDEX  conffiles  control  postinst  prerm
src/: CMakeLists.txt
src/autodiscovery/: autodiscovery.c  autodiscovery.h
src/config/: config.c  config.h
src/core/: main.c
src/monitoring/: gpu.c  gpu.h  monitoring.c  monitoring.h  netstatic.c  netstatic.h
src/network/: dns_resolver.c  dns_resolver.h  idn.c  idn.h  websocket.c  websocket.h  websocket_internal.h
src/ping/: ping.c  ping.h
src/platform/: paths.h  platform.h
src/protocol/: compress.c  compress.h  jsonrpc.c  jsonrpc.h  protocol.h  v1.c  v1.h  v2.c  v2.h
src/report/: report.c  report.h
src/terminal/: terminal.c  terminal.h
src/update/: update.c  update.h
src/utils/: komari_errno.c  logger.c  logger.h  motd.c  motd.h  utils.c  utils.h  virtual.c  virtual.h
tests/: CMakeLists.txt  README.md  test_compress.c  test_config.c  test_idn.c  test_jsonrpc.c  test_monitoring.c  test_report.c  test_update.c  test_utils.c  test_v1.c  test_v2.c  test_websocket.c
